WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274936
[UnifiedPDF] The data detectors page overlay layer doesn't need backing store
https://bugs.webkit.org/show_bug.cgi?id=274936
Summary
[UnifiedPDF] The data detectors page overlay layer doesn't need backing store
Simon Fraser (smfr)
Reported
2024-05-30 17:05:59 PDT
Data detector items have their own layers, so we don't need a big document overlay tiled layer and we don't need to issue repaints in it.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-30 17:06:16 PDT
<
rdar://problem/129034911
>
Simon Fraser (smfr)
Comment 2
2024-05-30 17:09:27 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/29345
EWS
Comment 3
2024-05-30 20:41:25 PDT
Committed
279559@main
(81447b127263): <
https://commits.webkit.org/279559@main
> Reviewed commits have been landed. Closing PR #29345 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug