[UnifiedPDF] The data detectors page overlay layer doesn't need backing store https://bugs.webkit.org/show_bug.cgi?id=274936 rdar://129034911

Reviewed by Abrar Rahman Protyasha.

Each DataDetectorHighlight has its own GraphicsLayer into which it paints. Fading is done via
opacity on this layer.

These DD layers are parented in the `OverlayType::Document` page overlay layer, which
can be an empty container with no backing store. So don't request that it use a tiled layer.

We can also remove calls to -setNeedsRepaint in the overlay layer, simplifying
`didInvalidateHighlightOverlayRects()` somewhat.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/PDFDataDetectorOverlayController.mm:
(WebKit::PDFDataDetectorOverlayController::installOverlayIfNeeded):
(WebKit::PDFDataDetectorOverlayController::didInvalidateHighlightOverlayRects):

Canonical link: https://commits.webkit.org/279559@main